--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
     <br>
     <a>Sistema de gestión de ingresos y gastos</a>
     <br>
-    <a th:href="@{/empresa/findall}">Sistema de gestión de empresas</a>
+    <a th:href="@{/VerEmpresas}">Sistema de gestión de empresas</a>
     <br>
 </body>
 </html>
