--- a/src/main/resources/templates/Empleado/agregarEmpleado.html
+++ b/src/main/resources/templates/Empleado/agregarEmpleado.html
@@ -48,7 +48,15 @@
             <div class="form-group col-md-12">
                 <label class="col-md-3" for="empresaEmpleado">Empresa a la que pertenece:</label>
                 <div class="col-md-6">
-                    <input type="text" th:field="*{empresaEmpleado}" class="form-control" id="empresaEmpleado" required="required"></div>
+                   <!-- <input type="text" th:field="*{empresaEmpleado}" class="form-control" id="empresaEmpleado" required="required"> -->
+                    <select th:field="*{empresaEmpleado.idEmpresa}" name="empresaEmpleado" class="form-control" id="empresaEmpleado">
+                        <option  value="0" selected>Seleccione Empresa</option>
+                        <option th:each="empresa : ${emprelist}"
+                                th:value="${empresa.idEmpresa}"
+                                th:text="${empresa.nombreEmpresa}">
+                        </option>
+                    </select>
+                </div>
             </div>
         </div>
 
@@ -57,7 +65,14 @@
             <div class="form-group col-md-12">
                 <label class="col-md-3" for="rolEmpleado">Rol del Empleado:</label>
                 <div class="col-md-6">
-                    <input type="text" th:field="*{rolEmpleado}" class="form-control" id="rolEmpleado" required="required"></div>
+                    <select th:field="*{rolEmpleado}" name="rolEmpleado" id="rolEmpleado" class="form-control">
+                        <option  value="0" selected>Seleccione el rol</option>
+                        <option th:each="rol : ${T(co.mintic.mh.moventHandler.entities.Enum_Roles).values()}"
+                                th:value="${rol}"
+                                th:text="${rol}">
+                        </option>
+                    </select>
+                </div>
             </div>
         </div>
 
