--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,16 +2,32 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/resources/webapp/css/style.css" type="text/css">
     <title>Home</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+
 </head>
 <body>
-    <h1>Menu</h1>
-    <p th:text="${mensaje}"> lista </p>
-    <a th:href="@{/VerEmpleados}">Sistema de gestión de empleado</a>
-    <br>
-    <a>Sistema de gestión de ingresos y gastos</a>
-    <br>
-    <a th:href="@{/VerEmpresas}">Sistema de gestión de empresas</a>
-    <br>
+
+    <nav id="sidebarMenu" class=" d-lg-block sidebar bg-white">
+        <div class="position-sticky">
+            <h1 class="text-center">Menu</h1>
+            <div class="list-group list-group-flush mx-3 mt-4">
+                <a th:href="@{/VerEmpleados}"  class="list-group-item list-group-item-action py-2 ripple">
+                    <span>Sistema de gestión de empleado</span>
+                </a>
+                <a th:href="@{/VerMovimientos}" class="list-group-item list-group-item-action py-2 ripple">
+                    <span>Sistema de gestión de ingresos y gastos</span>
+                </a>
+                <a th:href="@{/VerEmpresas}" class="list-group-item list-group-item-action py-2 ripple">
+                    <span>Sistema de gestión de empresas</span>
+                </a>
+            </div>
+        </div>
+    </nav>
+
 </body>
 </html>
