Se agrega los estilos del index

--- a/src/main/resources/templates/Empleado/verEmpleados.html
+++ b/src/main/resources/templates/Empleado/verEmpleados.html
@@ -25,7 +25,7 @@
           bottom: 0;
           left: 0;
           padding: 10px 0 0; /* Height of navbar */
-          box-shadow: 0 2px 5px 0 rgb(0 0 0 / 5%), 0 2px 10px 0 rgb(0 0 0 / 5%);
+          box-shadow: 13px 13px 20px #cbced1, -13px -13px 20px #fff;
           width: 300px;
           z-index: 600;
           height: 100vh;
