--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -54,6 +54,7 @@
 <nav id="sidebarMenu" class=" d-lg-block sidebar bg-white">
     <div class="position-sticky">
         <h1 class="text-center">Menu</h1>
+        <h5 class="text-center" th:text="${empleado.correoEmpleado}"></h5>
         <div class="list-group list-group-flush mx-3 mt-4">
             <a th:href="@{/VerEmpleados}"  class="list-group-item list-group-item-action py-2 ripple">
                 <span>Sistema de gestión de empleado</span>
